--- a/imu_bno055/package.xml
+++ b/imu_bno055/package.xml
@@ -7,6 +7,8 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>message_generation</build_depend>
+  <!--exec_depend>message_runtime</exec_depend-->
   <build_depend>std_msgs</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
